# valorant-discord-rich-presence

./: .editorconfig  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml  rust.yml
src/: game.rs  lib.rs  lockfile.rs  main.rs  tls.rs  websocket.rs
src/discord/: actions.rs  activity.rs  mod.rs
src/game/: riot_client.rs
src/game/riot_client/: events.rs  lockfile_retry.rs
src/valorant/: game_state.rs  mod.rs  presence.rs  presence_analyzer.rs  session.rs  websocket.rs
