[package]
name = "valorant-discord-rich-presence"
version = "0.1.0-beta2"
edition = "2021"
publish = false
authors = ["NyCode <me@nycode.dev>"]
description = "Show what you are doing in valorant in your discord rich presence."
repository = "https://github.com/NyCodeGHG/valorant-discord-rich-presence"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6"
thiserror = "1"
lazy-regex = "2.3"
tokio = { version = "1", features = ["full"] }
async-tungstenite = { version = "0.17", features = [
    "tokio-rustls-webpki-roots",
] }
base64 = "0.13"
futures = "0.3"
eyre = "0.6"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
tokio-rustls = "0.23"
color-eyre = "0.6"
url = "2.3"
tokio-retry = "0.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
